Updated the Theme name across the site from the starter theme name to Christmas time, the theme for this website.

--- a/devwp/style.css
+++ b/devwp/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: Yestau
+Theme Name: Christmas Time
 Version: 1.0.1
-Description: Elvish for "Begin Again (I'm a nerd)," this is the base theme used for any projects I work on. From here this can be edited and updated to be able to spin up wordpress sites very quickly.
+Description: Christmas Time is upon us, and this is the theme for our christmas page at Foothills Church.
 Author: Josh Forrester
 Author URI: https://onefortyfivedesign.org
 
