--- a/devwp/sass/components/_backgrounds.scss
+++ b/devwp/sass/components/_backgrounds.scss
@@ -28,11 +28,42 @@
   height: 100vh;
 }
 
+.viewport-header {
+
+  .head-container {
+    margin: 30px 0px 20px 0px;
+    padding: 35px 0px 10px 0px;
+  }
+
+  .logo img {
+    position: relative;
+    margin: auto;
+    width: 300px;
+    max-width: none;
+  }
+
+  .headline {
+    position: relative;
+    z-index: 5;
+  }
+}
+@media screen and (min-width: 40em) {
+  .viewport-header {
+    .logo img {
+      width: 600px;
+      margin-top: 100px;
+    }
+
+  }
+
+}
+
 
 //*********************************************
 //************** VIDEO HEADER *****************
 //*********************************************
 video {
+  background-color: $primary;
   object-fit: cover;
   width: 100vw;
   height: 100vh;
@@ -41,15 +72,17 @@ video {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: -2;
-
+  margin-top: -1px;
 }
+
 .viewport-header {
   position: relative;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 80vh;
+  padding-bottom: 100px; // this pulls the text UP to be centered since the hidden background on the navbar makes it appear off center
 }
 
 
