--- a/devwp/sass/utilities/_alignment.scss
+++ b/devwp/sass/utilities/_alignment.scss
@@ -49,6 +49,16 @@
   transform: translate(-50%, -50%);
 }
 
+.image-middle {
+  position: relative;
+}
+
+.image-middle img {
+  position: absolute;
+  text-align: center;
+
+}
+
 
 
 //*********************************************
