Finished the first two sections on the homepage, still need to do the FAQ.

--- a/devwp/sass/components/_backgrounds.scss
+++ b/devwp/sass/components/_backgrounds.scss
@@ -24,6 +24,10 @@
   position: relative;
 }
 
+.banner-background {
+  height: auto;
+}
+
 .full-background-xl {
   height: 100vh;
 }
@@ -103,7 +107,12 @@ body {
   color: $background;
 }
 
-.primary-background {
-  background-color: $background;
+.red-background {
+  background-color: red;
+  color: white;
+}
+
+.green-background {
+  background-color: green;
 }
 
