--- a/devwp/sass/components/_buttons.scss
+++ b/devwp/sass/components/_buttons.scss
@@ -17,15 +17,14 @@
   box-sizing: border-box;
   appearance: none;
   background-color: transparent;
-  border: 2px solid #02B3FF;                // change this color
-  color: #02B3FF;                           // change this color
+  border: 2px solid white;                // change this color
+  color: white;                           // change this color
   border-radius: 0.6em;
   cursor: pointer;
   display: flex;
   align-self: center;
   font-size: 1rem;
   line-height: 1;
-  margin: 20px;
   padding: 1.2em 2.8em;
   text-decoration: none;
   text-align: center;
@@ -45,11 +44,11 @@
 //*********************************************
 .btn-v1 {
   //background: ;
-  border-color: #02B3FF;                  // change this color
+  border-color: $background;                  // change this color
   color: #fff;                            // change this color
   background: {
     image:
-    linear-gradient(45deg, #02B3FF 50%,   // change this color
+    linear-gradient(45deg, red 50%,   // change this color
     transparent 50%);
     position: 100%;
     size: 400%;
