--- a/devwp/sass/utilities/_typography.scss
+++ b/devwp/sass/utilities/_typography.scss
@@ -106,9 +106,9 @@ p {
   font-family: $main-font;
   font-size: $normal;
   color: black;
-  padding: 20px;
+  margin: 0;
+  padding: 0;
   line-height: 1.6;
-  padding-bottom: 0;
 }
 
 .featured-paragraph {
