Finished the structure of the FAQ sections, though the questions will need to be updated later.

--- a/devwp/sass/main.scss
+++ b/devwp/sass/main.scss
@@ -47,6 +47,7 @@
 @import 'components/buttons';
 @import 'components/backgrounds';
 @import 'components/info-card';
+@import 'components/FAQ';
 
 
 
