--- a/devwp/sass/components/_footer.scss
+++ b/devwp/sass/components/_footer.scss
@@ -51,7 +51,8 @@
 
 
 .social-icons .fa-facebook, .social-icons .fa-instagram, .social-icons .fa-twitter {
-  background-color: green;
+  background-color: black;
+  color: white;
 }
 
 
